namespace CrisisConnect.Domain.Enums;

public enum ModeVerification
{
    Automatique,
    ManuelleOperateur
}
