namespace CrisisConnect.Domain.Enums;

public enum TypeFacture
{
    Electricite,
    Gaz,
    Eau,
    TelephoneFixe
}
